--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.948.0",
+    "@cloudflare/workers-types": "^4.20251213.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -28,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
